Blazor configuration işlemleri yapıldı.

--- a/Template.Example/_Imports.razor
+++ b/Template.Example/_Imports.razor
@@ -6,9 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using MK.Accountancy.Blazor
-@using Blazorise
-@using Blazorise.DataGrid
-@using Volo.Abp.BlazoriseUI
-@using Volo.Abp.BlazoriseUI.Components
+@using Template.Example
+@using Template.Example.Shared
+
 @using DevExpress.Blazor
