--- a/src/MK.Blazor.Core/Components/DevComp/Layouts/DevGridLayout.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/Layouts/DevGridLayout.razor
@@ -1,5 +1,54 @@
-﻿<h3>DevGridLayout</h3>
+﻿<DxGridLayout ColumnSpacing="@ColumnSpacing" 
+              RowSpacing="@RowSpacing">
+
+   <Rows>
+        @for (int i = 0; i < RowCount; i++)
+        {
+            @if(RowHeights == null)
+            {
+                <DxGridLayoutRow Height="@DefaultRowHeight" />
+            }
+            else if(i < RowHeights.Length)
+            {
+                <DxGridLayoutRow Height="@RowHeights[i]" />
+            }
+            else
+            {
+                <DxGridLayoutRow Height="@DefaultRowHeight" />
+            }
+        }                  
+   </Rows>
+
+   <Columns>
+       @for (int i = 0; i < ColumnCount; i++)
+        {
+            if(ColumnWidths == null)
+            {
+                <DxGridLayoutColumn Width="*" />
+            }
+            else if(i < ColumnWidths.Length)
+            {
+                <DxGridLayoutColumn Width="@ColumnWidths[i]" />
+            }
+            else
+            {
+                <DxGridLayoutColumn Width="@ColumnWidths[^1]" />
+            }
+        }
+   </Columns>
+
+   <Items>
+       @GridLayoutItems
+   </Items>
+</DxGridLayout>
 
 @code {
-
+    [Parameter] public string ColumnSpacing { get; set; } = "3px";
+    [Parameter] public string RowSpacing { get; set; } = "3px";
+    [Parameter] public int RowCount { get; set; } = 1;
+    [Parameter] public int ColumnCount { get; set; } = 1;
+    [Parameter] public string[] RowHeights { get; set; }
+    [Parameter] public string[] ColumnWidths { get; set; }
+    [Parameter] public string DefaultRowHeight { get; set; } = "28";
+    [Parameter,EditorRequired] public RenderFragment GridLayoutItems { get; set; }
 }
