Textedit componenti için çalışma yapıldı.

--- a/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevTextEdit.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevTextEdit.razor
@@ -1,4 +1,6 @@
-﻿<DxGridLayoutItem Column="ColumnIndex"
+﻿@inherits DevBaseEditor;
+
+<DxGridLayoutItem Column="ColumnIndex"
                   ColumnSpan="ColumnSpan"
                   CssClass="@LayoutItemCssClass"
                   Row="RowIndex"
