--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -1,3 +1,5 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using System.Globalization
+@using Microsoft.AspNetCore.Components.Web
 @using DevExpress.Blazor
 @using MK.Blazor.Core.Components.DevComp.DataEditors.Base
+
