--- a/src/MK.Blazor.Core/wwwroot/css/component.css
+++ b/src/MK.Blazor.Core/wwwroot/css/component.css
@@ -8,3 +8,8 @@
     text-align: right;
     padding-right: 28px !important;
 }
+
+.currency input {
+    text-align: right;
+    padding-right: 3px !important;
+}
