--- a/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevComboboxEnumEdit.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevComboboxEnumEdit.razor
@@ -1,5 +1,5 @@
-﻿@inherits DevBaseEditor;
-@typeparam TItem;
+﻿@inherits DevBaseEditor
+@typeparam TItem where TItem : Enum
 
 <DxGridLayoutItem Column="ColumnIndex"
                   ColumnSpan="ColumnSpan"
@@ -9,13 +9,14 @@
                   Visible="Visible">
     <Template>
         <DxComboBox @ref="_dxComboBox"
-                   @bind-Value="@Value"
-                   CssClass="@EditorCssClass"
-                   Data="DataSource"
-                   Enabled="Enabled"
-                   InputCssClass="@InputCssClass"
-                   ReadOnly="@ReadOnly"
-                   TextFieldName="@TextFieldName"
+                    @bind-Value="@Value"
+                    CssClass="@EditorCssClass"
+                    Data="DataSource"
+                    Enabled="Enabled"
+                    InputCssClass="@InputCssClass"
+                    ReadOnly="@ReadOnly"
+                    TextFieldName="@TextFieldName"
+                    ValueFieldName="@ValueFieldName"
                     SelectedItemChanged="SelectedItemChanged">
         </DxComboBox>
     </Template>
@@ -36,13 +37,13 @@
 </DevLabel>
 
 @code {
-    private DxComboBox<TItem,TItem> _dxComboBox;
+    private DxComboBox<ComboboxEnumItem<TItem>, TItem> _dxComboBox;
     private string _value;
 
-    [Parameter, EditorRequired] public IEnumerable<TItem> DataSource { get; set; }
+    [Parameter, EditorRequired] public IEnumerable<ComboboxEnumItem<TItem>> DataSource { get; set; }
     [Parameter] public string TextFieldName { get; set; }
-    [Parameter]
-    public Action<TItem> SelectedItemChanged { get; set; }
+    [Parameter] public string ValueFieldName { get; set; }
+    public Action<ComboboxEnumItem<TItem>> SelectedItemChanged { get; set; }
     [Parameter, EditorRequired] public TItem Value { get; set; }
 
     [Parameter] public EventCallback<TItem> ValueChanged { get; set; }
