--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -2,4 +2,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using DevExpress.Blazor
 @using MK.Blazor.Core.Components.DevComp.DataEditors.Base
+@using MK.Blazor.Core.Models
 
