--- a/src/MK.Blazor.Core/wwwroot/css/component.css
+++ b/src/MK.Blazor.Core/wwwroot/css/component.css
@@ -17,3 +17,9 @@
 .text-center input {
     text-align: center;
 }
+
+.button-edit {
+    background-image: url("../images/buttonedit.svg");
+    width: 16px;
+    height: 16px;
+}
