Datagrid componeneti tasasrlandı.

--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -1,7 +1,8 @@
 ﻿@using System.Globalization
 @using Microsoft.AspNetCore.Components.Web
 @using DevExpress.Blazor
+@using DevExpress.Blazor.Base
 @using MK.Blazor.Core.Components.DevComp.DataEditors.Base
+@using MK.Blazor.Core.Components.DevComp.DataViewers.Base
 @using MK.Blazor.Core.Models
 @using MK.Blazor.Core.Services
-
