ListPageToolbar companenti tasarlandı.

--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Globalization
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.Extensions.Localization
 @using DevExpress.Blazor
 @using DevExpress.Blazor.Base
 @using MK.Blazor.Core.Components.DevComp.DataEditors.Base
