--- a/src/MK.Blazor.Core/wwwroot/css/component.css
+++ b/src/MK.Blazor.Core/wwwroot/css/component.css
@@ -23,3 +23,55 @@
     width: 16px;
     height: 16px;
 }
+
+.form-control:focus {
+    background-color: #ecef9a
+}
+
+/*-------------------Toolbar Image------------------------*/
+.newimage {
+    background-image: url("../images/New.svg");
+}
+
+.editimage {
+    background-image: url("../images/Edit.svg");
+}
+
+.deleteimage {
+    background-image: url("../images/delete.svg");
+}
+
+.filterimage {
+    background-image: url("../images/filter.svg");
+}
+
+.grouppanelimage {
+    background-image: url("../images/grouppanel.svg");
+}
+
+.printimage {
+    background-image: url("../images/Print.svg");
+}
+
+.tableimage {
+    background-image: url("../images/Table.svg");
+}
+
+.selectimage {
+    background-image: url("../images/Select.svg");
+}
+
+.cancelimage {
+    background-image: url("../images/Cancel.svg");
+}
+
+.saveimage {
+    background-image: url("../images/Save.svg")
+}
+
+.newimage, .editimage, .deleteimage, .printimage, .filterimage, .grouppanelimage,
+.tableimage, .selectimage, .cancelimage, .saveimage {
+    width: 16px;
+    height: 16px;
+    margin: 0 8px 0 0;
+}
