ListPagelayout companeneti tasarlandı.

--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -5,5 +5,7 @@
 @using DevExpress.Blazor.Base
 @using MK.Blazor.Core.Components.DevComp.DataEditors.Base
 @using MK.Blazor.Core.Components.DevComp.DataViewers.Base
+@using MK.Blazor.Core.Components.DevComp.Utilities;
+@using MK.Blazor.Core.Components.Commons.Loadings;
 @using MK.Blazor.Core.Models
 @using MK.Blazor.Core.Services
