--- a/src/MK.Accountancy.Blazor/Shared/MainLayout.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainLayout.razor
@@ -26,7 +26,7 @@
         <Items>
             <DxGridLayoutItem Area="header">
                 <Template>
-                    
+                    <MainMenu />
                 </Template>
             </DxGridLayoutItem>
             <DxGridLayoutItem Area="sidebar">
