--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -8,9 +8,12 @@
 @using Microsoft.Extensions.Localization
 @using Microsoft.JSInterop
 @using MK.Accountancy.Blazor
+@using MK.Accountancy.Blazor.Shared
 @using MK.Accountancy.Localization
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
 @using Volo.Abp.BlazoriseUI.Components
+@using Volo.Abp.MultiTenancy
+@using Volo.Abp.Users
 @using DevExpress.Blazor
