Page alt yapısı oluşturuluyor.

--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -9,7 +9,15 @@
 @using Microsoft.JSInterop
 @using MK.Accountancy.Blazor
 @using MK.Accountancy.Blazor.Shared
+@using MK.Accountancy.Blazor.Pages.Base
+@using MK.Accountancy.CommonDtos
 @using MK.Accountancy.Localization
+@using MK.Accountancy.Units
+@using MK.Accountancy.Blazor.Services
+@using MK.Blazor.Core.Components.DevComp.Layouts
+@using static MK.Blazor.Core.Helpers.Functions
+@using MK.Blazor.Core.Components.DevComp.DataViewers
+@using MK.Blazor.Core.Components.DevComp.Utilities
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
