--- a/src/MK.Blazor.Core/Components/DevComp/DataViewers/DevDataGrid.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/DataViewers/DevDataGrid.razor
@@ -7,7 +7,7 @@
                   RowSpan="RowSpan">
     <Template>
         <DxDataGrid @ref="DataGridService.DataGrid"
-                    Data="DataGridService.DataSource"
+                    Data="DataGridService.ListDataSource"
                     AllowColumnDragDrop="AllowColumnDragDrop"
                     AllowSort="AllowSort"
                     ColumnResizeMode="ColumnResizeMode"
