--- a/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
@@ -1,6 +1,6 @@
 ﻿@inject IStringLocalizer<AccountancyResource> L
 
-<div class="card w-100 bg-light">
+<div class="card w-100 text-white bg-dark">
     <div class="accordion-body p-0">
         <DxMenu Title="@($"MK {L["Pre-Accounting"]}")"
                 ItemsPosition="ItemPosition.Start"
