--- a/src/MK.Blazor.Core/Components/DevComp/Utilities/DevListPageToolBar.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/Utilities/DevListPageToolBar.razor
@@ -57,9 +57,8 @@
                    BeginGroup="true"
                    Visible="ListPageService.ToolbarCheckBoxVisible">
                <DevCheckBox CheckedChangedInvokeFunction="CheckedChangedAsync"
-                            FalseCaption="@L["ActiveCards"]"
-                            TrueCaption="@L["PassiveCards"]"
-                            >
+                     FalseCaption="@L["PassiveCards"]"
+                     TrueCaption="@L["ActiveCards"]">
 
                </DevCheckBox>
     </DxToolbarItem>
@@ -83,7 +82,7 @@
     [Parameter] public EventCallback ReserveButtonClick { get; set; }
     [Parameter, EditorRequired] public EventCallback<Task> GetListDataSource { get; set; }
 
-    [Parameter] public bool NewButtonEnabled { get; set; }
+    [Parameter] public bool NewButtonEnabled { get; set; } = true;
     [Parameter] public bool UpdateButtonEnabled { get; set; }
     [Parameter] public bool DeleteButtonEnabled { get; set; }
     [Parameter] public bool PrintButtonEnabled { get; set; }
