--- a/src/MK.Accountancy.Blazor/Shared/MainLayout.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainLayout.razor
@@ -37,6 +37,7 @@
             <DxGridLayoutItem Area="content" CssClass="content px-4">
                 <Template>
                     @Body
+                    <UIMessageAlert/>
                 </Template>
             </DxGridLayoutItem>
         </Items>
