--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -18,10 +18,12 @@
 @using static MK.Blazor.Core.Helpers.Functions
 @using MK.Blazor.Core.Components.DevComp.DataViewers
 @using MK.Blazor.Core.Components.DevComp.Utilities
+@using MK.Accountancy.Blazor.Pages.Abp
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
 @using Volo.Abp.BlazoriseUI.Components
 @using Volo.Abp.MultiTenancy
 @using Volo.Abp.Users
+@using Volo.Abp.AspNetCore.Components.Messages
 @using DevExpress.Blazor
