--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -19,6 +19,7 @@
 @using MK.Blazor.Core.Components.DevComp.DataViewers
 @using MK.Blazor.Core.Components.DevComp.Utilities
 @using MK.Accountancy.Blazor.Pages.Abp
+@using MK.Blazor.Core.Components.DevComp.DataEditors
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
