--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Globalization
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.Extensions.Localization
+@using Microsoft.AspNetCore.Components.Forms
 @using DevExpress.Blazor
 @using DevExpress.Blazor.Base
 @using MK.Blazor.Core.Components.DevComp.DataEditors.Base
