--- a/src/MK.Accountancy.Blazor/Pages/Units/UnitEditPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Units/UnitEditPage.razor
@@ -25,6 +25,7 @@
                               FalseCaption="@L["Passive"]"
                               RowIndex="0"
                               TrueCaption="@L["Active"]"
+                              SeperateCaptionVisible="false"
                               @bind-Value="@Service.DataSource.Active">
                 </DevCheckEdit>
                 <DevTextEdit Caption="@L["Name"]"
