--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -20,6 +20,7 @@
 @using MK.Blazor.Core.Components.DevComp.Utilities
 @using MK.Accountancy.Blazor.Pages.Abp
 @using MK.Blazor.Core.Components.DevComp.DataEditors
+@using MK.Accountancy.SpecialCodes
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
