Özel kod edit page çalışma yapıldı.

--- a/src/MK.Accountancy.Blazor/Pages/Units/UnitEditPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Units/UnitEditPage.razor
@@ -78,7 +78,7 @@
                         Visible="true"
                         Width="1000px">
                         <ListPageContent>
-
+                            <SpecialCodeListPage/>
                         </ListPageContent>
 </DevPopupListPageLayout>
 }
