--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -21,6 +21,7 @@
 @using MK.Accountancy.Blazor.Pages.Abp
 @using MK.Blazor.Core.Components.DevComp.DataEditors
 @using MK.Accountancy.SpecialCodes
+@using MK.Accountancy.Blazor.Pages.SpecialCodes
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
