Banka departman list ve edit pageleri yapıldı.

--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -22,6 +22,7 @@
 @using MK.Blazor.Core.Components.DevComp.DataEditors
 @using MK.Accountancy.SpecialCodes
 @using MK.Accountancy.Blazor.Pages.SpecialCodes
+@using MK.Accountancy.BankDepartments;
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
