Banka kartı formları yapıldı.

--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -22,7 +22,9 @@
 @using MK.Blazor.Core.Components.DevComp.DataEditors
 @using MK.Accountancy.SpecialCodes
 @using MK.Accountancy.Blazor.Pages.SpecialCodes
-@using MK.Accountancy.BankDepartments;
+@using MK.Accountancy.BankDepartments
+@using MK.Accountancy.Banks
+@using MK.Accountancy.Blazor.Pages.BankDepartments
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
