Banka hesap işlemleri tamamlandı.

--- a/src/MK.Accountancy.Blazor/Pages/Banks/BankListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Banks/BankListPage.razor
@@ -41,19 +41,19 @@
             </HeaderTemplate>
             <Columns>
                 <DxDataGridColumn Caption="@L["Code"]"
-                                  Field="@nameof(ListUnitDto.Code)"
+                                  Field="@nameof(BankListDto.Code)"
                                   Width="150px" />
                 <DxDataGridColumn Caption="@L["Name"]"
-                                  Field="@nameof(ListUnitDto.Name)"
+                                  Field="@nameof(BankListDto.Name)"
                                   Width="150px" />
                 <DxDataGridColumn Caption="@L["SpecialCodeOneName"]"
-                                  Field="@nameof(ListUnitDto.SpecialCodeOneName)"
+                                  Field="@nameof(BankListDto.SpecialCodeOneName)"
                                   Width="150px" />
                 <DxDataGridColumn Caption="@L["SpecialCodeTwoName"]"
-                                  Field="@nameof(ListUnitDto.SpecialCodeTwoName)"
+                                  Field="@nameof(BankListDto.SpecialCodeTwoName)"
                                   Width="150px" />
                 <DxDataGridColumn Caption="@L["Description"]"
-                                  Field="@nameof(ListUnitDto.Description)"
+                                  Field="@nameof(BankListDto.Description)"
                                   Width="*" />
             </Columns>
         </DevDataGrid>
