--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -25,6 +25,9 @@
 @using MK.Accountancy.BankDepartments
 @using MK.Accountancy.Banks
 @using MK.Accountancy.Blazor.Pages.BankDepartments
+@using MK.Accountancy.BankAccounts
+@using MK.Blazor.Core.Models
+@using MK.Accountancy.Blazor.Pages.Banks;
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
