--- a/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevButonEdit.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevButonEdit.razor
@@ -107,5 +107,9 @@
             Attributes = new Dictionary<string, object>();
             Attributes.Add("disabled", "disabled");
         }
+        else
+        {
+            Attributes?.Remove("disabled");
+        }
     }
 }
