--- a/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevCheckEdit.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/DataEditors/DevCheckEdit.razor
@@ -46,6 +46,8 @@
     [Parameter] public string TrueCaption { get; set; }
     [Parameter] public string FalseCaption { get; set; }
     [Parameter] public EventCallback<bool> ValueChanged { get; set; }
+    [Parameter] public override bool SeperateCaptionVisible { get; set; } = false;
+    [Parameter] public override bool CaptionVisible { get; set; } = false;
     [Parameter]
     public bool Value
     {
