--- a/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
@@ -27,7 +27,7 @@
                                     IconCssClass="fa fa-clone"/>
 
                             <DxMenuItem Text="@L["CustomerCards"]"
-                                    NavigateUrl="customercards"
+                                    NavigateUrl="currentcards"
                                     IconCssClass="fa fa-clone"/>
 
                             <DxMenuItem Text="@L["CashCards"]"
