--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -27,7 +27,9 @@
 @using MK.Accountancy.Blazor.Pages.BankDepartments
 @using MK.Accountancy.BankAccounts
 @using MK.Blazor.Core.Models
-@using MK.Accountancy.Blazor.Pages.Banks;
+@using MK.Accountancy.Blazor.Pages.Banks
+@using MK.Accountancy.Currents
+@using MK.Accountancy.Blazor.Pages.Currents
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
