--- a/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
@@ -35,7 +35,7 @@
                                     IconCssClass="fa fa-clone"/>
 
                             <DxMenuItem Text="@L["WarehouseCards"]"
-                                    NavigateUrl="warehousecards"
+                                    NavigateUrl="storecards"
                                     IconCssClass="fa fa-clone"/>
 
                             <DxMenuItem Text="@L["StockCards"]"
