--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -30,6 +30,7 @@
 @using MK.Accountancy.Blazor.Pages.Banks
 @using MK.Accountancy.Currents
 @using MK.Accountancy.Blazor.Pages.Currents
+@using MK.Accountancy.Stores
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
