--- a/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
@@ -55,7 +55,7 @@
                                     IconCssClass="fa fa-clone"/>
 
                             <DxMenuItem Text="@L["PeriodCards"]"
-                                    NavigateUrl="periodcards"
+                                    NavigateUrl="termcards"
                                     IconCssClass="fa fa-clone" />
                         </Items>
                     </DxMenuItem>
