--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -31,6 +31,8 @@
 @using MK.Accountancy.Currents
 @using MK.Accountancy.Blazor.Pages.Currents
 @using MK.Accountancy.Stores
+@using MK.Accountancy.Terms
+@using MK.Accountancy.Blazor.Pages
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
