--- a/src/MK.Accountancy.Blazor/Pages/ServicePages/ServiceEditPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/ServicePages/ServiceEditPage.razor
@@ -1,19 +1,20 @@
 ﻿@inherits BaseEditPage
-@inject UnitService Service
+@inject ServiceService Service
+@inject UnitService UnitService
 @inject SpecialCodeService SpecialCodeService
 
 <DevPopupEditPageLayout CancelButtonText="@L["Cancel"]"
                         EditPageService="Service"
-                        Caption="@L["UnitCard"]"
-                        Height="300px"
+                        Caption="@L["ServiceCard"]"
+                        Height="350px"
                         ListPageService="Service"
                         OnSubmit="OnSubmit"
                         SubmitButtonText="@L["Save"]"
-                        Width="670px">
+                        Width="700px">
     <EditPageContent>
-        <DevGridLayout ColumnCount="7"
-                       ColumnWidths="@ColumnWidths("80","3","170","50","80","3","170")"
-                       RowCount="4">
+        <DevGridLayout ColumnCount="8"
+                       ColumnWidths="@ColumnWidths("90","3","195","25","90","3","80","107")"
+                       RowCount="7">
             <GridLayoutItems>
                 <DevTextEdit Caption="@L["Code"]"
                              ColumnIndex="2"
@@ -22,6 +23,7 @@
                              @bind-Value="@Service.DataSource.Code">
                 </DevTextEdit>
                 <DevCheckEdit ColumnIndex="6"
+                              ColumnSpan="2"
                               FalseCaption="@L["Passive"]"
                               RowIndex="0"
                               TrueCaption="@L["Active"]"
@@ -30,35 +32,62 @@
                 </DevCheckEdit>
                 <DevTextEdit Caption="@L["Name"]"
                              ColumnIndex="2"
-                             ColumnSpan="5"
+                             ColumnSpan="6"
                              IsFocus="true"
                              NullText="@L["EnterName"]"
                              RowIndex="1"
                              @bind-Value="@Service.DataSource.Name">
                 </DevTextEdit>
-                <DevButonEdit ButtonClickInvokeFunction="() => { SpecialCodeService.BeforeShowPopupListPage(SpecialCodeType.SpecialCodeOne,CardType.Unit,Service.DataSource.SpecialCodeOneId);}"
+                <DevButonEdit ButtonClickInvokeFunction="() => {
+                                UnitService.BeforeShowPopupListPage(Service.DataSource.UnitId);}"
+                              Caption="@L["Unit"]"
+                              ColumnIndex="2"
+                              NullText="@L["SelectCard"]"
+                              RowIndex="2"
+                              Service="UnitService"
+                              @bind-Value="@Service.DataSource.UnitName">
+                </DevButonEdit>
+                <DevTextEdit Caption="@L["Barcode"]"
+                             ColumnIndex="6"
+                             ColumnSpan="2"
+                             NullText="@L["EnterBarcode"]"
+                             RowIndex="2"
+                             @bind-Value="@Service.DataSource.Barcode">
+                </DevTextEdit>
+                <DevCurrencyEdit Caption="@L["UnitPrice"]"
+                             ColumnIndex="2"
+                             RowIndex="3"
+                             @bind-Value="@Service.DataSource.UnitPrice">
+                </DevCurrencyEdit>
+                <DevSpinEdit Caption="@L["TaxRate"]"
+                             ColumnIndex="6"
+                             RowIndex="3"
+                             @bind-Value="@Service.DataSource.TaxRate">
+                </DevSpinEdit>
+                <DevButonEdit ButtonClickInvokeFunction="() => { SpecialCodeService.BeforeShowPopupListPage(SpecialCodeType.SpecialCodeOne,CardType.Service,Service.DataSource.SpecialCodeOneId);}"
                               Caption="@L["SpecialCodeOneName"]"
                               ColumnIndex="2"
                               DeleteButtonKeydownInvokeFunction="() =>{ SpecialCodeService.ButtonEditDeleteKeyDown(Service.DataSource, nameof(Service.DataSource.SpecialCodeOneName));}"
                               NullText="@L["SelectCard"]"
-                              RowIndex="2"
+                              RowIndex="4"
                               Service="SpecialCodeService"
                               @bind-Value="@Service.DataSource.SpecialCodeOneName">
                 </DevButonEdit>
-                <DevButonEdit ButtonClickInvokeFunction="() => { SpecialCodeService.BeforeShowPopupListPage(SpecialCodeType.SpecialCodeTwo,CardType.Unit,Service.DataSource.SpecialCodeTwoId);}"
+                <DevButonEdit ButtonClickInvokeFunction="() => { SpecialCodeService.BeforeShowPopupListPage(SpecialCodeType.SpecialCodeTwo,CardType.Service,Service.DataSource.SpecialCodeTwoId);}"
                               Caption="@L["SpecialCodeTwoName"]"
                               ColumnIndex="6"
+                              ColumnSpan="2"
                               DeleteButtonKeydownInvokeFunction="() => { SpecialCodeService.ButtonEditDeleteKeyDown(Service.DataSource, nameof(Service.DataSource.SpecialCodeTwoName));}"
                               NullText="@L["SelectCard"]"
-                              RowIndex="2"
+                              RowIndex="4"
                               Service="SpecialCodeService"
                               @bind-Value="@Service.DataSource.SpecialCodeTwoName">
                 </DevButonEdit>
                 <DevMemoEdit Caption="@L["Description"]"
                              ColumnIndex="2"
-                             ColumnSpan="5"
+                             ColumnSpan="6"
                              NullText="@L["EnterDescription"]"
-                             RowIndex="3"
+                             RowIndex="5"
                              RowSpan="2"
                              @bind-Value="@Service.DataSource.Description">
                 </DevMemoEdit>
@@ -66,6 +95,22 @@
         </DevGridLayout>
     </EditPageContent>
 </DevPopupEditPageLayout>
+
+@if (UnitService.IsPopupListPage)
+{
+    <DevPopupListPageLayout DataGridService="UnitService"
+                        CancelButtonText="@L["Cancel"]"
+                        Caption="@L["UnitCards"]"
+                        Closed="UnitService.HideListPage"
+                        SelectButtonInvokeFunction="(() => {UnitService.SelectEntity(Service.DataSource);})"
+                        SelectButtonText="@L["Select"]"
+                        Visible="true"
+                        Width="1000px">
+        <ListPageContent>
+            <UnitListPage />
+        </ListPageContent>
+    </DevPopupListPageLayout>
+}
 
 @if (SpecialCodeService.IsPopupListPage)
 {
