--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -32,7 +32,10 @@
 @using MK.Accountancy.Blazor.Pages.Currents
 @using MK.Accountancy.Stores
 @using MK.Accountancy.Terms
-@using MK.Accountancy.Blazor.Pages
+@using MK.Accountancy.Blazor.Pages.Terms
+@using MK.Accountancy.Services
+@using MK.Accountancy.Blazor.Pages.ServicePages
+@using MK.Accountancy.Blazor.Pages.Units
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
