--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -36,6 +36,7 @@
 @using MK.Accountancy.Services
 @using MK.Accountancy.Blazor.Pages.ServicePages
 @using MK.Accountancy.Blazor.Pages.Units
+@using MK.Accountancy.Safes
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
