--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -37,6 +37,8 @@
 @using MK.Accountancy.Blazor.Pages.ServicePages
 @using MK.Accountancy.Blazor.Pages.Units
 @using MK.Accountancy.Safes
+@using MK.Accountancy.Expenses
+@using MK.Accountancy.Blazor.Pages.Expenses
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
