--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -39,6 +39,8 @@
 @using MK.Accountancy.Safes
 @using MK.Accountancy.Expenses
 @using MK.Accountancy.Blazor.Pages.Expenses
+@using MK.Accountancy.Stocks
+@using MK.Accountancy.Blazor.Pages.Stocks
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
