--- a/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
@@ -51,7 +51,7 @@
                                     IconCssClass="fa fa-clone"/>
 
                             <DxMenuItem Text="@L["BranchCards"]"
-                                    NavigateUrl="branchcards"
+                                    NavigateUrl="departmentcards"
                                     IconCssClass="fa fa-clone"/>
 
                             <DxMenuItem Text="@L["PeriodCards"]"
