--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -41,6 +41,8 @@
 @using MK.Accountancy.Blazor.Pages.Expenses
 @using MK.Accountancy.Stocks
 @using MK.Accountancy.Blazor.Pages.Stocks
+@using MK.Accountancy.Departments
+@using MK.Accountancy.Blazor.Pages.Departments
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
